--- a/colorpicker/build.gradle
+++ b/colorpicker/build.gradle
@@ -1,28 +1,11 @@
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'Hong'
-    bintrayName = 'colorpicker'
-
-    publishedGroupId = 'com.github.duanhong169'
-    artifact = 'colorpicker'
-
-    libraryDescription = 'A `ColorPicker` for android'
-    libraryVersion = '1.1.6'
-
-    gitUrl = 'https://github.com/duanhong169/ColorPicker.git'
-    siteUrl = 'https://github.com/duanhong169/ColorPicker'
-
-    licenseName = 'Apache License 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
 android {
-    compileSdkVersion 27
+    namespace "top.defaults.colorpicker"
+    compileSdkVersion 34
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -37,17 +20,20 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.github.duanhong169:logger:1.0.0'
     implementation 'com.github.duanhong169:checkerboarddrawable:1.0.2'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
-apply from: 'https://raw.githubusercontent.com/duanhong169/bintray-gradle/master/bintray.gradle'
