--- a/colorpicker/build.gradle
+++ b/colorpicker/build.gradle
@@ -2,15 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     namespace "top.defaults.colorpicker"
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
