[add] apply plugin: 'maven-publish'

--- a/colorpicker/build.gradle
+++ b/colorpicker/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     namespace "top.defaults.colorpicker"
@@ -22,6 +23,20 @@ android {
 
 }
 
+/*
+afterEvaluate {
+    publishing {
+        publications {
+            create<MavenPublication>("release") {
+                from(components["release"])
+                groupId = 'com.github.jarryleo'
+                artifactId = 'colorpicker'
+                version = '1.0.1'
+            }
+        }
+    }
+}*/
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -32,3 +47,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
